[package]
name = "aoc_2023_day24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../../advent" }
sscanf = "0.4"
num = "0.4"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
rustc-hash = "1.1"
priority-queue = "1.3.2"
enum-iterator = "2.1.0"
pyo3 = "0.20.0"
nalgebra = "0.32.3"
rand = "0.8.5"

